--- a/templates/user/register_user_success.html.twig
+++ b/templates/user/register_user_success.html.twig
@@ -1,1 +1,7 @@
-success
+{% extends "master.html.twig" %}
+
+{% block title %}User registration successful{% endblock %}
+
+{% block content %}
+<p>Registration successful. You may now <a href="/login">login</a>.</p>
+{% endblock content %}
