--- a/templates/user/register_user.html.twig
+++ b/templates/user/register_user.html.twig
@@ -30,8 +30,9 @@
         phone: <input type="text" name="phone" value="{{v.phone}}"><br> 
         Role:
         <select name="userRole">
-            <option value="Seller">Seller</option>
+            <option value="Admin">Admin</option>
             <option value="Buyer">Buyer</option>
+            <option value="Seller">Seller</option>
         </select><br> 
         Email: <input type="email" name="email" value="{{v.email}}"><span id="isTaken"></span><br>
         Password: <input type="password" name="pass1"><br>
