--- a/templates/user/register_user.html.twig
+++ b/templates/user/register_user.html.twig
@@ -27,7 +27,7 @@
     <form method="post">
         Name: <input type="text" name="name" value="{{v.name}}"><br> 
         Address: <input type="text" name="address" value="{{v.address}}"><br> 
-        phone: <input type="text" name="phone" value="{{v.phone}}"><br> 
+        Phone: <input type="text" name="phone" value="{{v.phone}}"><br> 
         Role:
         <select name="userRole">
             <option value="Admin">Admin</option>
