--- a/templates/user/login_user.html.twig
+++ b/templates/user/login_user.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
 
 {% if error %}
-    <p>Login invalid. Try again or <a href="/admin/register">register</a>.</p>
+    <p>Login invalid. Try again or <a href="/user/register">register</a>.</p>
 {% endif %}
 
 <form method="post">
