--- a/templates/user/register_user_success.html.twig
+++ b/templates/user/register_user_success.html.twig
@@ -3,5 +3,5 @@
 {% block title %}User registration successful{% endblock %}
 
 {% block content %}
-<p>Registration successful. You may now <a href="/login">login</a>.</p>
+<p>Registration successful. You may now <a href="/user/login">login</a>.</p>
 {% endblock content %}
