--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -3,7 +3,7 @@
 {% extends "master.html.twig" %}
 {% block title %}News list{% endblock %}
 {% block content %}
-    <p><a href="/admin/news/add">Add product</a><p>
+    <p><a href="/news/add">Add News</a><p>
     <table border=1>
         <tr><th>#</th><th>Title</th><th>New Body</th><th>Date</th><th>action</th></tr>
         {% for n in list %}
