--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -1,11 +1,9 @@
-{# empty Twig template #}
-
 {% extends "master.html.twig" %}
-{% block title %}News list{% endblock %}
+{% block title %}Photo list{% endblock %}
 {% block content %}
-    <p><a href="/news/add">Add News</a><p>
+    <p><a href="/photo/add">Add News</a><p>
     <table border=1>
-        <tr><th>#</th><th>Title</th><th>New Body</th><th>Date</th><th>action</th></tr>
+          <tr><th>#</th><th>Title</th><th>New Body</th><th>Date</th><th>action</th></tr>
         {% for n in list %}
                 <tr class="{% if loop.index is odd %}rowodd{% else %}roweven{% endif %}">
                     <td>{{n.id}}</td>
