--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -1,7 +1,7 @@
 {% extends "master.html.twig" %}
 {% block title %}Photo list{% endblock %}
 {% block content %}
-    <p><a href="/photo/add">Add News</a><p>
+    <p><a href="/news/add">Add News</a><p>
     <table border=1>
           <tr><th>#</th><th>Title</th><th>New Body</th><th>Date</th><th>action</th></tr>
         {% for n in list %}
