updated news templates

--- a/templates/news/news_addedit_success.html.twig
+++ b/templates/news/news_addedit_success.html.twig
@@ -4,5 +4,5 @@
 
 {% block content %}    
     <p>News {% if isEditing %}updated{% else %}added{% endif %}.
-        <a href="/admin/news/list">Click to continue</a>.</p>
+        <a href="/news/list">Click to continue</a>.</p>
 {% endblock %}
