--- a/templates/news/news_delete_success.html.twig
+++ b/templates/news/news_delete_success.html.twig
@@ -4,5 +4,5 @@
 {% block title %}News delete{% endblock %}
 
 {% block content %}    
-    <p>news deleted. <a href="/admin/news/list">Click to continue</a>.</p>
+    <p>news deleted. <a href="/news/list">Click to continue</a>.</p>
 {% endblock %}
