--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -11,8 +11,8 @@
                     <td>{{n.newsBody}}</td>
                     <td>{{n.newsDate}}</td>                    
                     <td>
-                        <a href="/admin/news/delete/{{n.id}}">Delete</a>
-                        <a href="/admin/news/edit/{{n.id}}">Edit</a>
+                        <a href="/news/delete/{{n.id}}">Delete</a>
+                        <a href="/news/edit/{{n.id}}">Edit</a>
                     </td>
                 </tr>
         {% else %}
