--- a/templates/news/news_delete.html.twig
+++ b/templates/news/news_delete.html.twig
@@ -6,7 +6,7 @@
     <form action="/news/list" style="display:inline;">            
         <input type="submit" value="Candel">
     </form>
-    <form method="post" action="/news/delete/{{p.id}}" style="display:inline;">            
+    <form method="post" action="/news/delete/{{n.newsId}}" style="display:inline;">            
         <input type="hidden" name="confirmed" value="true">
         <input type="submit" value="Delete">
     </form>    
