--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -6,7 +6,7 @@
           <tr><th>#</th><th>Title</th><th>New Body</th><th>Date</th><th>action</th></tr>
         {% for n in list %}
                 <tr class="{% if loop.index is odd %}rowodd{% else %}roweven{% endif %}">
-                    <td>{{n.id}}</td>
+                    <td>{{n.newsId}}</td>
                     <td>{{n.title}}</td>
                     <td>{{n.newsBody}}</td>
                     <td>{{n.newsDate}}</td>                    
