solved password reset

--- a/templates/user/passreset_form_success.html.twig
+++ b/templates/user/passreset_form_success.html.twig
@@ -4,6 +4,6 @@
 
 {% block content %}
     
-    <p>Your password has been reset <a href="/login">Click to login</a>.</p>
+    <p>Your password has been reset <a href="/user/login">Click to login</a>.</p>
     
 {% endblock %}
