* finished property, add/delete/edit

--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -1,5 +1,5 @@
 {% extends "master.html.twig" %}
-{% block title %}Photo list{% endblock %}
+{% block title %}News list{% endblock %}
 {% block content %}
     <p><a href="/news/add">Add News</a><p>
     <table border=1>
