--- a/templates/photo/photo_delete_success.html.twig
+++ b/templates/photo/photo_delete_success.html.twig
@@ -1,9 +1,9 @@
 
 {% extends "master.html.twig" %}
 
-{% block title %}News delete{% endblock %}
+{% block title %}Photo delete{% endblock %}
 
 {% block content %}    
-    <p>photo deleted. <a href="/photo/list">Click to continue</a>.</p>
+    <p>Photo deleted. <a href="/photo/list">Click to continue</a>.</p>
 {% endblock %}
 
