--- a/templates/property/property_addedit.html.twig
+++ b/templates/property/property_addedit.html.twig
@@ -30,7 +30,7 @@
         Baths: <input type="number" min="0" max="10" step="1" name="baths" value="{{v.baths}}"><br>
         Price: <input type="number" min="0" max="999999" step="0.01" name="squreFeet" value="{{v.squreFeet}}"><br>
         SqureFeet: <input type="number" min="0" max="999999" step="0.01" name="price" value="{{v.price}}"><br>
-        image: <input type="file" name="productImage" ><br><br>
+        Image: <input type="file" name="propertyImage" ><br><br>
         <input type="submit" value="Add Property">
     </form>
 
