--- a/templates/property/property_addedit_success.html.twig
+++ b/templates/property/property_addedit_success.html.twig
@@ -1,10 +1,9 @@
 {% extends "master.html.twig" %}
 
-{% block title %}{% if isEditing %}updated{% else %}added{% endif %} successful{% endblock %}
+{% block title %}Property {% if isEditing %}update{% else %}add{% endif %}{% endblock %}
 
-{% block content %}
-    
-<p>Property has {% if isEditing %}updated{% else %}added{% endif %}  succesfully,<a href="/property/list">Click to continue</a>.</p>
-
+{% block content %}    
+    <p>Property {% if isEditing %}updated{% else %}added{% endif %}.
+        <a href="/property/list">Click to continue</a>.</p>
 {% endblock %}
 
