--- a/templates/property/property_addedit_success.html.twig
+++ b/templates/property/property_addedit_success.html.twig
@@ -1,4 +1,4 @@
-{% extends "master.html.twig" %}
+{#{%extends "master.html.twig" %}#}
 
 {% block title %}Property {% if isEditing %}update{% else %}add{% endif %}{% endblock %}
 
