* work in user profile

--- a/templates/property/property_list.html.twig
+++ b/templates/property/property_list.html.twig
@@ -19,7 +19,7 @@
                     <td>
                         <a href="/property/delete/{{p.propertyId}}">Delete</a>
                         <a href="/property/edit/{{p.propertyId}}">Edit</a>
-                         <a href="/property/googlemap/{{p.propertyId}}">Go Goole maps</a>
+                         <a href="/property/googlemap/{{p.propertyId}}">Goole Maps</a>
                     </td>
                 </tr>
         {% else %}
