--- a/templates/property/google_maps.html.twig
+++ b/templates/property/google_maps.html.twig
@@ -23,31 +23,39 @@
       // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
       function initMap() {
+          
+        var posLatLng = { lat: {{property.latitude}}, lng: {{property.longitude}}};
+          
         var map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: {{property.latitude}}, lng: {{property.longitude}}},
+          center: posLatLng,
           zoom: 15
         });
 
         var infowindow = new google.maps.InfoWindow();
         var service = new google.maps.places.PlacesService(map);
 
+        var marker = new google.maps.Marker({
+              map: map,
+              position: posLatLng,
+              title: "{{property.propertyType}}"
+            });
+            
         service.getDetails({
           placeId: 'ChIJN1t_tDeuEmsRUsoyG83frY4'
         }, function(place, status) {
           if (status === google.maps.places.PlacesServiceStatus.OK) {
-            var marker = new google.maps.Marker({
-              map: map,
-              position: place.geometry.location
-            });
+            
             google.maps.event.addListener(marker, 'click', function() {
               infowindow.setContent('<div><strong>' + place.name + '</strong><br>' +
                 'Place ID: ' + place.place_id + '<br>' +
                 place.formatted_address + '</div>');
               infowindow.open(map, this);
             });
+            
           }
         });
       }
+        
     </script>
   </head>
   <body>
