--- a/templates/user/profile_user.html.twig
+++ b/templates/user/profile_user.html.twig
@@ -1,1 +1,188 @@
+{% extends "master.html.twig" %}
+
+{% block title %}Profile{% endblock %}
+{% block headextra %}
+
+    <script>
+        $(document).ready(function () {
+            // respond to all events that may change the value of input
+            $('input[name=email]').bind('propertychange change click keyup input paste', function () {
+                // AJAX request
+                var email = $('input[name=email]').val();
+                $('#isTaken').load('/isemailregistered/' + email);
+            });
+        });
+    </script>
+{% endblock %}
+
+{% block content %}
+
+    <!-- Body content -->
+
+    <div class="header-connect">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-sm-8  col-xs-12">
+                    <div class="header-half header-call">
+                        <p>
+                            <span><i class="pe-7s-call"></i> 514 296 0249</span>
+                            <span><i class="pe-7s-mail"></i> realestate@company.com</span>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-2 col-md-offset-5  col-sm-3 col-sm-offset-1  col-xs-12">
+                    <div class="header-half header-social">
+                        <ul class="list-inline">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-vine"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>            
+    <!--End top header -->
+
+    <nav class="navbar navbar-default ">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt=""></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse yamm" id="navigation">
+                <div class="button navbar-right">
+                    <button class="navbar-btn nav-button wow bounceInRight login" onclick=" window.open('/user/login')" data-wow-delay="0.4s">Login</button>
+                    <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('/user/register')" data-wow-delay="0.5s">Register</button>
+                </div>
+                <ul class="main-nav nav navbar-nav navbar-right">
+                    <li class="dropdown ymm-sw " data-wow-delay="0.1s">
+                        <a href="/" class="dropdown-toggle active" data-toggle="dropdown" data-hover="dropdown" data-delay="200">Home <b class="caret"></b></a>
+
+                    </li>
+
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="properties.html">Properties</a></li>
+                    <li class="wow fadeInDown" data-wow-delay="0.1s"><a class="" href="property.html">Property</a></li>
+
+
+                    <li class="wow fadeInDown" data-wow-delay="0.4s"><a href="contact.html">Contact</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- End of nav bar -->
+
+    <div class="page-head"> 
+            <div class="container">
+                <div class="row">
+                    <div class="page-head-content">
+                        <h1 class="page-title">Hello : <span class="orange strong">{{user.name}}</span></h1>               
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- End page header -->
+      <!-- property area -->
+        <div class="content-area user-profiel" style="background-color: #FCFCFC;">&nbsp;
+            <div class="container">   
+                <div class="row">
+                    <div class="col-sm-10 col-sm-offset-1 profiel-container">
+
+                        <form  method="post" enctype="multipart/form-data">
+                            <div class="profiel-header">
+                                <h3>
+                                    <b>Update</b> YOUR PROFILE <br>
+                                    <small>This information will let us know more about you.</small>
+                                </h3>
+                                <hr>
+                            </div>
+
+                            <div class="clear">
+                                <div class="col-sm-3 col-sm-offset-1">
+                                    <div class="picture-container">
+                                        <div class="picture">
+                                            <img src="{{user.pathImage}}" class="picture-src" id="wizardPicturePreview" title=""/>
+                                            <input name="memberImage" type="file" id="wizard-picture">
+                                        </div>
+                                        <h6>Choose Picture</h6>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-3 padding-top-25">
+
+                                    <div class="form-group">
+                                        <label> Name <small>(required)</small></label>
+                                        <input name="name" type="text" class="form-control" value="{{user.name}}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Address <small>(required)</small></label>
+                                        <input name="address" type="text" class="form-control" value="{{user.address}}">
+                                    </div> 
+                                    <div class="form-group">
+                                        <label>Email <small>(required)</small></label>
+                                        <input name="email" type="email" class="form-control" value="{{user.email}}">
+                                    </div> 
+                                </div>
+                                <div class="col-sm-3 padding-top-25">
+                                    <div class="form-group">
+                                        <label>Password <small>(required)</small></label>
+                                        <input value="{{user.password}}" name="Password" type="password" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Confirm password : <small>(required)</small></label>
+                                        <input type="password" class="form-control">
+                                    </div>
+                                </div>  
+
+                            </div>
+
+                        
+                    
+                            <div class="col-sm-5 col-sm-offset-1">
+                                <br>
+                                <input type='submit' class='btn btn-finish btn-primary' name='finish' value='Finish' />
+                            </div>
+                            <br>
+                    </form>
+
+                </div>
+            </div><!-- end row -->
+
+        </div>
+    </div>
+   
+
+{% endblock %}
+{% block footerExtra %}
+    <script src="/assets/js/modernizr-2.6.2.min.js"></script>
+
+    <script src="/assets/js/jquery-1.10.2.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/bootstrap-select.min.js"></script>
+    <script src="/assets/js/bootstrap-hover-dropdown.js"></script>
+
+    <script src="/assets/js/easypiechart.min.js"></script>
+    <script src="/assets/js/jquery.easypiechart.min.js"></script>
+
+    <script src="/assets/js/owl.carousel.min.js"></script>   
+    <script src="/assets/js/wow.js"></script>
+
+    <script src="/assets/js/icheck.min.js"></script>
+    <script src="/assets/js/price-range.js"></script>
+
+    <script src="/assets/js/main.js"></script>
+
+
+{% endblock %}
 
