updated the fotter

--- a/templates/user/login_user.html.twig
+++ b/templates/user/login_user.html.twig
@@ -16,7 +16,7 @@
                     <div class="header-half header-call">
                         <p>
                             <span><i class="pe-7s-call"></i> 514 296 0249</span>
-                            <span><i class="pe-7s-mail"></i> realestate@company.com</span>
+                            <span><i class="pe-7s-mail"></i> info@realestate.com</span>
                         </p>
                     </div>
                 </div>
