--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -123,8 +123,6 @@
                     {% endfor %}
 
 
-
-
                     <!-- Footer area-->
                     <div class="footer-area">
 
@@ -141,7 +139,7 @@
                                             <p>Lorem ipsum dolor cum necessitatibus su quisquam molestias. Vel unde, blanditiis.</p>
                                             <ul class="footer-adress">
                                                 <li><i class="pe-7s-map-marker strong"> </i> 3488 Cote Des Neiges</li>
-                                                <li><i class="pe-7s-mail strong"> </i> mj_hadi@realestat.com</li>
+                                                <li><i class="pe-7s-mail strong"> </i> info@realestat.com</li>
                                                 <li><i class="pe-7s-call strong"> </i> +1 514 519 7049</li>
                                             </ul>
                                         </div>
