--- a/templates/news/news_list.html.twig
+++ b/templates/news/news_list.html.twig
@@ -1,6 +1,6 @@
 {% extends "master.html.twig" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}News List{% endblock %}
 {% block headextra %}
 
 
