--- a/templates/property/property_addedit.html.twig
+++ b/templates/property/property_addedit.html.twig
@@ -121,8 +121,8 @@
 
                                         <div class="col-sm-6">
                                             <div class="form-group">
-                                                <label>Property Type<small>(required)</small></label>
-                                                <select name="propertyType">
+                                                <label>Property Type<small>(required)</small></label><br>
+                                                <select name="propertyType"  id="lunchBegins" class="selectpicker" data-live-search="true" data-live-search-style="begins" title="Select your property type">
                                                     <option value="Appartement">Appartement</option>
                                                     <option value="Condo">Condo</option>
                                                     <option value="House">House</option>
@@ -147,7 +147,7 @@
                                     <h4 class="info-text"> How much your Property is Beautiful ? </h4>
                                     <div class="row">
                                         <div class="col-sm-12"> 
-                                            <div class="col-sm-12"> 
+                                            <div class="col-sm-4"> 
                                                 <div class="form-group">
                                                     <label>Property Latitude :</label>
                                                     <input type="number" min="-90 " max="+90 " step="0.01" name="latitude" value="{{v.latitude}}" class="form-control" placeholder="3330000">
@@ -156,7 +156,7 @@
                                         </div>
 
                                         <div class="col-sm-12">
-                                            <div class="col-sm-3">
+                                            <div class="col-sm-4">
                                                 <div class="form-group">
                                                     <label>Property Longitude :</label>
                                                     <input type="number" min="-180 " max="+180 " step="0.01" name="longitude" value="{{v.longitude}}" class="form-control" placeholder="3330000">
@@ -219,7 +219,7 @@
                                             <div class="">
                                                 <p>
                                                     <label><strong>Terms and Conditions</strong></label>
-                                                    By accessing or using  GARO ESTATE services, such as 
+                                                    By accessing or using  Real ESTATE services, such as 
                                                     posting your property advertisement with your personal 
                                                     information on our website you agree to the
                                                     collection, use and disclosure of your personal information 
