--- a/templates/user/login_user.html.twig
+++ b/templates/user/login_user.html.twig
@@ -111,7 +111,7 @@
                         <h2>Social login :  </h2> 
 
                         <p>
-                            <a class="login-social" href="#"><i class="fa fa-facebook"></i>&nbsp;Facebook</a> 
+                            <a class="login-social" href="{{loginUrl}}"><i class="fa fa-facebook"></i>&nbsp;Facebook</a> 
                             <a class="login-social" href="#"><i class="fa fa-google-plus"></i>&nbsp;Gmail</a> 
                             <a class="login-social" href="#"><i class="fa fa-twitter"></i>&nbsp;Twitter</a>  
                         </p> 
