* work in list news and message

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12">
                         <h2>property Searching Just Got So Easy</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi deserunt deleniti, ullam commodi sit ipsam laboriosam velit adipisci quibusdam aliquam teneturo!</p>
+                        <p>WOULD YOU LIKE A FREE VALUATION?</p>
                         <div class="search-form wow pulse" data-wow-delay="0.8s">
 
                             <form action="" class=" form-inline">
@@ -625,7 +625,7 @@
                                 <div class="footer-title-line"></div>
 
                                 <img src="" alt="" class="wow pulse" data-wow-delay="1s">
-                                <p>Lorem ipsum dolor cum necessitatibus su quisquam molestias. Vel unde, blanditiis.</p>
+                                <p>Real Estate is a leading residential and commercial property agency, with land and valuation divisions based in Co Down with offices in Newry and Dungannon..</p>
                                 <ul class="footer-adress">
                                     <li><i class="pe-7s-map-marker strong"> </i> 3488 Cote Des Neiges</li>
                                     <li><i class="pe-7s-mail strong"> </i> info@realestate.com</li>
