* search not work alla

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -118,7 +118,7 @@
 
                                     </select>
                                 </div>
-                                <button class="btn search-btn" type="submit"><i class="fa fa-search"></i></button>
+                                <a class="btn search-btn" type="submit" href="/property/search"><i class="fa fa-search"></i></a>
 
                                 <div style="display: none;" class="search-toggle">
 
