--- a/templates/news/news_addedit_success.html.twig
+++ b/templates/news/news_addedit_success.html.twig
@@ -1,4 +1,4 @@
-{% extends "master.html.twig" %}
+{#{% extends "master.html.twig" %}#}
 
 {% block title %}News {% if isEditing %}update{% else %}add{% endif %}{% endblock %}
 
