*property list done

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -230,9 +230,9 @@
                                             <span class="proerty-price pull-right"> $ 300,000</span>
                                             <p style="display: none;">Suspendisse ultricies Suspendisse ultricies Nulla quis dapibus nisl. Suspendisse ultricies commodo arcu nec pretium ...</p>
                                             <div class="property-icon">
-                                                <img src="img/icon/bed.png">(5)|
-                                                <img src="img/icon/shawer.png">(2)|
-                                                <img src="img/icon/cars.png">(1)  
+                                                <img src="/assets/img/icon/bed.png">(5)|
+                                                <img src="/assets/img/icon/shawer.png">(2)|
+                                                <img src="/assets/img/icon/cars.png">(1)  
                                             </div>
                                         </div>
 
